2009-11-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-shell-prompt-pattern): Use \r for carriage
	return.
	(tramp-handle-make-symbolic-link)
	(tramp-handle-dired-compress-file, tramp-handle-expand-file-name):
	Quote file names.
	(tramp-send-command-and-check): New argument DONT-SUPPRESS-ERR.
	(tramp-handle-process-file): Use it.

2009-11-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-do-copy-or-rename-file-out-of-band): Set
	variables for computing the prompt for reading password.

2009-11-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-advice-file-expand-wildcards): Simplify.  Don't
	set `ad-return-value' if `ad-do-it' doesn't.

	* tramp-gvfs.el (tramp-gvfs-handle-write-region): Set file
	modification time.

2009-11-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-dbus-event-error): Raise only an error
	when `tramp-gvfs-dbus-event-vector' is set.
	(tramp-gvfs-maybe-open-connection): Loop over `read-event'.

2009-11-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-advice-minibuffer-electric-separator)
	(tramp-advice-minibuffer-electric-tilde): Unload advices via
	`tramp-unload'.
	(tramp-advice-make-auto-save-file-name)
	(tramp-advice-file-expand-wildcards): Apply also `ad-activate'
	after removing the advice.

2009-11-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-advice-make-auto-save-file-name)
	(tramp-advice-file-expand-wildcards): Unload via
	`ad-remove-advice'.

2009-11-08  Kevin Ryde <user42@zip.com.au>

	* tramp.el (tramp-advice-file-expand-wildcards): Don't rely on
	`ad-do-it'.

2009-11-08  Andr <m00naticus@gmail.com>  (tiny change)

	* tramp.el (tramp-handle-write-region): Copy but rename temp file,
	in order to keep context in SELinux.

2009-11-07  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.17 released.

	* tramp.el (tramp-handle-copy-directory): Don't use
	`file-remote-p' (due to compatibility).
